[gd_scene load_steps=3 format=3 uid="uid://r7cq2h8ludm4"]

[ext_resource type="Script" path="res://margin_container_options.gd" id="1_52n2j"]
[ext_resource type="AudioStream" uid="uid://b0j4uonjmq6kf" path="res://Sounds/Collect.mp3" id="2_5ara8"]

[node name="MarginContainerOptions" type="MarginContainer"]
visible = false
offset_left = 56.0
offset_top = 232.0
offset_right = 433.0
offset_bottom = 439.0
focus_neighbor_right = NodePath("../MarginContainer")
focus_mode = 2
script = ExtResource("1_52n2j")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Music" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
max_value = 2.0
step = 0.1
value = 2.0

[node name="Music Label" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Music"

[node name="Sound" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
max_value = 2.0
step = 0.1
value = 2.0

[node name="Sound Label" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Sound
"

[node name="Mute Music" type="CheckBox" parent="VBoxContainer"]
layout_mode = 2
text = "Mute Music
"

[node name="Mute Sounds" type="CheckBox" parent="VBoxContainer"]
layout_mode = 2
text = "Mute Sounds"

[node name="TestPop" type="AudioStreamPlayer" parent="." groups=["Sounds"]]
stream = ExtResource("2_5ara8")
volume_db = -5.0

[connection signal="value_changed" from="VBoxContainer/Music" to="." method="_on_music_value_changed"]
[connection signal="value_changed" from="VBoxContainer/Sound" to="." method="_on_sound_value_changed"]
